src/elements/content-picker/Footer.scss
@import '../common/variables';

.bcp-footer {
    align-items: center;
    background-color: $almost-white;
    border-top: 1px solid $off-white;
    display: flex;
    flex: 0 0 70px;
    justify-content: space-between;
    padding: 0 20px;

    .bcp-footer-left {
        min-width: 0;
    }

    .bcp-selected {
        margin: 0;
        width: 100%;

        .btn-content {
            display: inline-block;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            width: 100%;
        }
    }

    .bcp-selected-max {
        animation: be_pulse .5s 2 linear;
        color: $red;
        display: inline-block;
        font-size: 11px;
        margin-left: 5px;
    }

    .bcp-footer-actions {
        .btn {
            height: 32px;
            padding: 0;
            width: 40px;
        }

        .btn:first-child {
            border-right: 0;
        }

        .btn-primary svg {
            fill: #fff;
        }
    }

    .bcp-footer-right {
        display: flex;
        flex-shrink: 0;
    }

    .btn-group {
        margin-left: 5px;
        margin-right: 5px;
    }
}

@keyframes be_pulse {
    0%,
    100% {
        transform: scale(1);
    }

    50% {
        transform: scale(1.2);
    }
}

